# JARVIS-lite

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
object_analytics/: __init__.py  analytics.py  config.py  detector.py  llm_engine.py  logging_config.py  main.py  utils.py  voice_engine.py
