[project]
name = "real-time-object-analytics-engine-for-live-video-streams"
version = "0.1.0"
description = "Production-ready real-time object detection and analytics engine for live video streams using YOLOv8"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Suriya Sureshkumar", email = "suriyasureshkumarkannian@gmail.com"}
]
keywords = ["computer-vision", "object-detection", "yolo", "real-time", "analytics", "video-processing"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "openai>=1.0.0",
    "opencv-python>=4.11.0.86",
    "pyttsx3>=2.99",
    "sounddevice>=0.5.3",
    "ultralytics>=8.3.252",
    "vosk>=0.3.45",
]

[project.urls]
Homepage = "https://github.com/suriyasureshok/real-time-object-analytics-engine"
Repository = "https://github.com/suriyasureshok/real-time-object-analytics-engine.git"
Issues = "https://github.com/suriyasureshok/real-time-object-analytics-engine/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["object_analytics"]
